fix intro text too close

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -970,3 +970,8 @@ dt {
 .pro-pill {
   background-color: desaturate(darken($color_secondary, 10%), 5%);
 }
+
+// Front page
+.homepage-hero .intro__browse {
+  line-height: 1.2;
+}
